<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:padding="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:theme="@style/ThemeOverlay.AppCompat">

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/madefor"
            android:textColor="#757575"
            android:textSize="20sp" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:id="@+id/sajal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="0dp"
                card_view:cardPreventCornerOverlap="false">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/banner"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="#dddddd"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ramankit_banner_min" />

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/dp"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="55dp"
                        android:src="@drawable/nghianh" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="95dp"
                        android:layout_toRightOf="@id/dp"
                        android:fontFamily="sans-serif-condensed"
                        android:padding="16dp"
                        android:text="@string/nghianh"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/bio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/ramankit_bio" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/bio"
                        android:layout_margin="16dp"
                        android:weightSum="3">


                        <Button
                            android:id="@+id/email"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#00ffffff"
                            android:fontFamily="sans-serif-condensed"
                            android:onClick="sendEmail"
                            android:text="@string/email"
                            android:textColor="@color/colorAccent" />

                        <Button
                            android:id="@+id/github"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#00ffffff"
                            android:fontFamily="sans-serif-condensed"
                            android:onClick="openGithub"
                            android:text="@string/github"
                            android:textColor="@color/colorAccent" />

                        <Button
                            android:id="@+id/gplus"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#00ffffff"
                            android:fontFamily="sans-serif-condensed"
                            android:onClick="openGplus"
                            android:text="@string/gplus"
                            android:textColor="@color/colorAccent"

                            />

                    </LinearLayout>

                </RelativeLayout>


            </android.support.v7.widget.CardView>


        </RelativeLayout>
    </ScrollView>
</LinearLayout>